# fin-forge-pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  bandit.yaml  cdk.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cdk-deploy-dev.yml  cdk-deploy-prod.yml  cdk-diff.yml  ci.yml  deploy.yml  pr-check.yml  pr-validation.yml  unit-tests.yml
data/symbols/: all_equities.json  find_symbols.py  nasdaq.json  nasdaq_sp500.json  nyse.json  sp500.json
docs/: testing.md
docs/architecture/: data-pipeline-compaction.md  load_coverage_refinement.md
docs/deployment/: ci-cd-guide.md  ci-cd-setup.md
docs/diagrams/: generate-svgs.sh
docs/diagrams/extract/: 01-components.md  02-flow.md  03-sequence.md  04-retry-and-dlq.md  05-concurrency-and-rps.md  README.md
docs/diagrams/infrastructure/: 01-cdk-classes.md  README.md
docs/diagrams/load/: 01-components.md  02-data-flow.md  03-sequence.md  04-retry-and-dlq.md  05-batch-optimization.md  06-monitoring-metrics.md  README.md
docs/diagrams/transform/: 01-components.md  02-flow.md  03-sequence.md  04-data-quality-gate.md  05-backfill-map.md  06-glue-job-internals.md  07-io-and-schema.md  08-catalog-strategy.md  README.md
docs/screenshots/: README.md
docs/security/: scanning.md
docs/specs/extract/: README.md  (+6 more)
infrastructure/config/: types.py
infrastructure/constructs/: data_lake_construct.py
infrastructure/core/: __init__.py  security_stack.py  shared_storage_stack.py
infrastructure/governance/: __init__.py  catalog_stack.py
infrastructure/monitoring/: __init__.py  observability_stack.py
infrastructure/pipelines/: __init__.py
infrastructure/stacks/: analytics_stack.py  compute_stack.py  data_pipeline_stack.py  messaging_stack.py  monitoring_stack.py  orchestration_stack.py  security_stack.py  storage_stack.py
scripts/deploy/: deploy.py
scripts/localstack/: start_localstack.sh  stop_localstack.sh
scripts/spark/: Dockerfile  build.sh  clean.sh  run_tests.sh
scripts/validate/: validate_pipeline.py
src/: __init__.py
src/glue/: __init__.py
src/lambda/: __init__.py
tests/: conftest.py
tests/e2e/: README.md  conftest.py  test_full_pipeline_localstack.py  test_transform_workflow_localstack.py
tests/fixtures/: clients.py  data_builders.py  deterministic_data_builders.py  load_agent.py  load_builders.py  load_env.py  shared_fixtures.py
tests/integration/: conftest.py
tests/performance/: conftest.py
(+215 files in other folders)
